# airguitar

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test.yml
src/: base64.rs  connection.rs  error.rs  main.rs  mdns.rs  player.rs  result.rs  rtp_info.rs  server.rs
src/player/: control_receiver.rs  control_sender.rs  frame_buffer.rs  mod.rs  ntp.rs  server_receiver.rs  timing_receiver.rs  timing_sender.rs
src/rtsp/: connection.rs  handler.rs  listener.rs  mod.rs
