[package]
name = "airguitar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7"
alac = { version = "0.5", default-features = false }
base64ct = {version = "1.1", features = ["alloc", "std"] }
block-modes = "0.8"
bytes = "1.1"
libmdns = "0.6"
md-5 = "0.9"
once_cell = "1.8"
rand = "0.8"
rsa = "0.5"
rtp-rs = "0.6"
rtsp-types = "0.0.3"
sha-1 = "0.9"
sdp-types = "0.1"
tokio = { version = "1.12", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
