[package]
name = "airguitar"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7"
alac = { version = "0.5", default-features = false }
base64ct = {version = "1.3", features = ["alloc", "std"] }
block-modes = "0.8"
bytes = "1.1"
clap = { version = "3.0.12", features = ["cargo", "derive", "unicode"] }
libmdns = "0.6"
md-5 = "0.9"
nom = "7.1"
once_cell = "1.9"
rand = "0.8"
rodio = { version = "0.14", default-features = false }
rsa = "0.5"
rtp-rs = "0.6"
rtsp-types = "0.0.3"
sha-1 = "0.9"
sdp-types = "0.1"
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"
