[package]
name = "airguitar"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
alac = { version = "0.5", default-features = false }
base64ct = { version = "1.5", features = ["alloc", "std"] }
cbc = { version = "0.1", features = ["alloc", "std"] }
bytes = "1.2"
clap = { version = "3.2.11", features = ["cargo", "derive", "unicode"] }
libmdns = "0.7"
md-5 = "0.10"
nom = "7.1"
once_cell = "1.13"
rand = "0.8"
rodio = { version = "0.15", default-features = false }
rsa = "0.6"
rtp-rs = "0.6"
rtsp-types = "0.0.3"
sha-1 = "0.10"
sdp-types = "0.1"
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"
